# Learnings

MNIST_Model/Reference/: .gitignore  ERA_Session_4.ipynb  README.md.txt  minimal_prameter_model_training.ipynb  pyproject.toml
MNIST_Model/Reference/.cursor/plans/: gradcam-analysis-plan-10c45a19.plan.md
MNIST_Model/Reference/CIFAR100HFS/: .gitattributes  .gitignore  COMPLETE_SETUP_SUMMARY.txt  FILES_EXPLAINED.md  GRADIO_DEPLOYMENT.md  INDEX.md  MODEL_UPDATE_SUMMARY.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_GRADIO.txt  START_HERE.md  app.py  export_clean_model.py  model.py  requirements.txt  run_local.bat  run_local.sh  test_app_locally.py
MNIST_Model/Reference/ERAS5/: ERA_Session_5.ipynb  README.md
MNIST_Model/Reference/ERAS6/: ERA_M1_Session_6.ipynb
MNIST_Model/Reference/ERAS7/: Data_Exploration.ipynb  Data_Manager.py  mnist_training.py  model.py
MNIST_Model/Reference/ERAS8/: Data_Exploration.ipynb  Data_Manager.py  GRADCAM_QUICKSTART.md  GradCAM_Analysis.ipynb  GradCAM_Analysis_README.md  GradCAM_INDEX.md  GradCAM_Implementation_Summary.md  GradCAM_Visual_Guide.txt  README.md  README_GradCAM.txt  compute_confusion_metrics.py
MNIST_Model/Reference/ERAS8/gradcam_results/: analysis_summary.txt  recommendations.txt
MNIST_Model/Reference/ImageNet_ResNet50/: IMPLEMENTATION_COMPLETE.md  PHASE1_SUMMARY.md  QUICKSTART.md  README.md  requirements.txt
MNIST_Model/Reference/ImageNet_ResNet50/core/: __init__.py  augmentations.py  config.py  data_manager.py  logger.py  model.py  trainer.py
MNIST_Model/Reference/ImageNet_ResNet50/ec2/: ec2_setup.sh
(+43 files in other folders)
