[project]
name = "mnist-training"
version = "0.1.0"
description = "MNIST digit classification training with PyTorch - Modular OOP implementation"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
]


[project.scripts]
mnist-train = "mnist_training:main"

