[project]
name = "mnist-training"
version = "0.1.0"
description = "MNIST digit classification training with PyTorch - Modular OOP implementation"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
    "torch==2.8.0+cu126",
    "torchaudio==2.8.0+cu126", 
    "torchvision==0.23.0+cu126",
    "matplotlib>=3.3.4",
    "numpy>=1.21.0",
    "torchsummary>=1.5.1",
    "tqdm>=4.60.0"
]

[project.scripts]
mnist-train = "mnist_training:main"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true