[project]
name = "mnist-training"
version = "0.1.0"
description = "MNIST digit classification training with PyTorch - Modular OOP implementation"
readme = "README.md"
requires-python = ">=3.8,<3.12"
dependencies = [
]

[project.scripts]
mnist-train = "mnist_training:main"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true